b=555807; typed array native constructor fix; r=jorendorff